[package]
name = "usual-proc"
version = "0.1.1"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "The proc macros behind usual"
readme = "../README.md"
license = "MIT"
keywords = []
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.27"
syn = { version = "1.0.74", features = ["full"] }
quote = "1.0.9"
regex = "1.5.4"
