[package]
name = "usual"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "tokio_postgres"
required-features = [
    "tokio-postgres"
]

[dependencies]
anyhow = "1.0.38"
serde = { version = "1.0.126", features = ["derive"] }
usual-proc = { version = "0.1.0" }
tokio-postgres = { version = "0.7.2", features = ["with-chrono-0_4", "with-serde_json-1"], optional = true }

[dev-dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
tokio = { version = "1.6", features = ["rt", "rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.2", features = ["with-chrono-0_4", "with-serde_json-1"] }

[package.metadata.raze]
workspace_path = "//cargo"
package_aliases_dir = "./cargo"
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]
genmode = "Remote"
